--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
-# url: your book url like https://bookdown.org/yihui/bookdown
+url: https://turnerlab-monashuni.github.io/cuttag_workshop_2025/
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
   This is a tutorial for analysing Cut&Tag data.
